Initial Commit/Style.css
/* Rule Using universa selector */
*, *::after, *::before {
    box-sizing: border-box;
}


/* Topography */

html {
    font-size: 62.5%;
}

:root {
    --color-primary: #2584ff;
    --color-secondary: #00d9ff;
    --color-accent: Red;
    --color-headings:#1b0760;
    --color-body:#918ca4;
    --color-body-darker: #5c5577;
    --color-border:#ccc;
    --border-radius: 30px;

}



body {
    font-family: Inter, Arial, Arial, Helvetica, sans-serif;
    font-size: 2.4rem;
    line-height: 1.5;
    color: var(--color-body);
}

h1, h2, h3 {
    color: var(--color-headings);
    margin-bottom: 1rem;
    line-height: 1.1;
}

h1 {
    font-size: 7rem;
}
 
h2 {
    font-size: 4rem;
}

h3 {
    font-size: 3rem;
    font-weight: 500;
}

p{
    margin-top: 0;
}

@media screen and (min-width: 1024px) {



    body {
        font-size: 1.8rem;
    }

    h1 {
        font-size: 8rem;
    }


    h2 {
        font-size: 4rem;
    }
    

    h3 {
        font-size: 2.4rem;
    }
}
A {
    text-decoration: none;
}
/* Links */
.link-arrow {
    color:var (--color-accent);
    font-size: 2rem;
    font-weight: bold;
    text-transform: uppercase;
}

.link-arrow::after {
    content: '-->';
    margin-left: 5PX;
    transition: margin 0.15s;
}

.link-arrow:hover::after{
    margin-left: 10px;
}


@media  screen and (min-width: 1024px) {
    .link-arrow {
        font-size: 1.5rem;
    }
    
}

/* Badges */

.badge {
    border-radius: 20px;
    font-size: 2rem;
    font-weight: 400;
    padding: 0.5rem 2rem;
    white-space: nowrap;
}

.badge--primary {
    background: var(--color-primary);
    color:#fff
}

.badge--secondary {
    background: var(--color-secondary);
    color: #fff;
}

.badge--small  {
    font-size: 1.6rem;
    padding: 0.5rem 1.5rem;
}


@media screen and (min-width: 1024px) {
    .badge {
        font-size: 1.5rem;
        
    }
.badge--small {
    font-size: 1.2rem;
}
}


/* List */
.list {
    list-style: none;
    padding-left: 0;

}
.list--tick {
    list-style: none;
    padding: 0.5;
    color: #126de4;
    /* color: var(--color-headings); */
    font-size: 2rem;
  }
  
  .list--tick .list__item {
    position: relative;
    padding-left: 25px;
    margin-bottom: 8px;
  }
  
  .list--tick .list__item::before {
    content: "  ✔";
    position: absolute;
    left: 0;
    color: green;
    font-size: 16px;
    padding: 0rem;
    
  }
.plan .list__item {
    margin-bottom: 2rem;
}


/* ICONS */
.icon {
    height: 40px;
    width:40px;
}
.icon--small {
    width: 30px;
    height: 30px;
}

.icon--primary {
    fill: var(--color-primary);
}

.icon--white {
    fill: #fff;
} 

.icon-container {
    align-items: center;
    background: #f3f9fa;
    border-radius: 100%;
    display: inline-flex;
    height: 64px;
    justify-content: center;
    width: 64px;
}

.icon-container--accent {
    background: var(--color-accent);
}
/* Button */
.btn {
    border-radius: 40px;
    border: 0;
    cursor: pointer;
    font-size: 1.8rem;
    font-weight: 600;
    margin: 1rem 0;
    outline: 0;
    padding: 2rem 3rem;
    text-align:center;
    text-transform: uppercase;
    white-space: nowrap;
}
.btn--primary:hover {
    background: #3a8ffd;
    /* lighten(primary, 10%) */
}


.btn .icon {
    width: 2rem;
    height: 2rem;
    margin-right: 1rem;
    vertical-align: middle;
}
.btn--primary {
    background: var(--color-primary);
    color:#fff

}

.btn--secondary {
    background: var(--color-secondary);
    color: #fff;
}

.btn--secondary:hover {
    background-color: #00c8eb;
}

.btn--accent {
    background-color: var(--color-accent) ;
    color: #fff;
    
}

.btn--accent:hover {
    background: #ec3000;
    
}

.btn--stretched {
    padding-left: 6rem;
    padding-right: 6rem;
}
.btn--block {
    display: inline-block;
    width: 100%;
}

@media screen and (min-width:1024px) {
    .btn {
        font-size: 1.5rem;
}}


/* Inputs */
.input {
    border-radius: var(--border-radius);
    border: 1px solid var(--color-border);
    color: var(--color-headings);
    font-size: 2rem;
    outline: 0;
    padding: 1.5rem 3.5rem;
}

::placeholder {
    color: #cdcbd7;
}

.input-group {
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius);
    display: flex;
}

.input-group .input {
    border: 0;
    flex-grow: 1;
    padding: 1.5rem 2rem;
}

.input-group .btn {
    margin: 4px;
}

@media screen and(min-width: 1024px) {
    .input {
        font-size: 1.5rem;
        
    }
    
}

/* Cards */
.card {
    border-radius: 7px;
    box-shadow: 0 0 20px 10px #f3f3f3;
    overflow: hidden;
}

.card__header,
 .card__body {
    padding: 2rem 3rem;
}

.card--primary .card__header{
    background: var(--color-primary);
    color: white;
}

.card--secondary .card__header{
    background: var(--color-secondary);
    color: white; 
}

/* Plans */
.plan {
    transition: transform .2s ease-out;
}
.plan__name {
    color: #fff;
    margin: 0;
    font-weight: 500;
    font-size: 2.4rem;
}



.plan__price {
    font-size: 6rem;
}

.plan__billing-cycle {
    font-size: 2.4rem;
    font-weight: 300;
    opacity: 0.8;
    margin-right: 1rem;
}

.card--primary .badge--primary {
    background: #126de4;
}
.card--secondary .badge--secondary {
    background: #02cdf1;
}

.plan__description {
    font-size: 2rem;
    font-weight: 300;
    letter-spacing: 1px;
    display: block;
    
}
.plan--popular {
    transform: scale(1.1);
}
.plan--popular .card__header {
    position: relative;
}
.plan--popular .card__header::before {
    content: url(Images/popular.svg);
    width: 40px;
    display: inline-block;
    position: absolute;
    top: 0;
    right: 5%;
    top: -4%;
}

.plan:hover {
    transform: scale(1.05);
}
.plan--popular:hover {
    transform: scale(1.15);
}
/* ... */

